--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,9 @@
 /* TODO Add site wide styles */
 #root{
-    overflow: hidden;
     background-color: black;
     min-height: 100vh;
     font-family: 'Inconsolata', monospace;
-
+    overflow: hidden;
 }
 
 
@@ -15,10 +14,9 @@ body {
 }
 
 .page-container{
-    min-height: 100vh;
+    min-height: 100%;
     margin-left: 5vw;
     margin-right: 5vw;
-    overflow: hidden;
     padding-bottom: 5vh;
 
 
